# ken_ghost

./: .gitignore  README.md
ken_description/: CMakeLists.txt  package.xml
ken_description/config/: display.rviz
ken_description/launch/: display.launch.py
ken_description/meshes/: XM430-W350.stl  arm01.stl  arm_base.stl  base.stl  link1.stl  link2.stl  link3.stl  link4.stl  shinai.stl
ken_description/urdf/: arm02.stl  arm03.stl  ken.urdf.xacro  ken.xacro
ken_driver/: CMakeLists.txt  README.md  package.xml
ken_driver/config/: ken_controllers.yaml
ken_driver/include/ken_driver/: ken_driver.hpp  ken_interface.hpp
ken_driver/launch/: detection_tools_bringup.launch.py  ken_driver.launch.py  rs.launch.py
ken_driver/src/: ken_control_node.cpp  ken_driver.cpp  ken_goal_checker_node.cpp  ken_interface.cpp
ken_mission_manager/: CMakeLists.txt  package.xml
ken_mission_manager/config/: ps4_auto_config.yaml
ken_mission_manager/launch/: missin_manager.launch.py
ken_mission_manager/src/: ken_mission_manager_node.cpp
ken_motion_sound/: CMakeLists.txt  package.xml
ken_motion_sound/src/: ken_motion_sound_node.cpp
ken_motion_sound_py/: package.xml  setup.cfg  setup.py
ken_motion_sound_py/ken_motion_sound_py/: subscriber_member_function.py
ken_msgs/: CMakeLists.txt  package.xml
ken_msgs/msg/: MissionTargetArray.msg  MissionTrajectory.msg
ken_path_planner/: CMakeLists.txt  package.xml
ken_path_planner/config/: path_planning_config.yaml  ps4_auto_config.yaml
ken_path_planner/launch/: auto_path_teleop.launch.py  path_planner.launch.py
ken_path_planner/src/: ken_fk.cpp  ken_ik.cpp  ken_path_planner_node.cpp
ken_ros2_test/: CMakeLists.txt  package.xml
ken_ros2_test/launch/: message_sub_test.launch.py
ken_ros2_test/src/: message_sub_node.cpp  pub_test_joint_trajectory_msg_node.cpp
ken_target_detect/: CMakeLists.txt  package.xml
ken_target_detect/config/: detection_params.yaml
ken_target_detect/launch/: detect.launch.py
ken_target_detect/src/: detect_node.cpp
ken_teleop/: CMakeLists.txt  package.xml
ken_teleop/config/: ps4_config.yaml
(+7 files in other folders)
